# LineFollower_Braia_Code

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  partitions.csv  partitions_bkp.csv  platformio.ini  sdkconfig  sdkconfig.ESP32-BraiaV3  sdkconfig.ESP32-BraiaV3.old  sdkconfig.ESP32-Gateway  sdkconfig.ESP32-Gateway.old  sdkconfig.ESP32-QEMU  sdkconfig.ESP32-QEMU.old  sdkconfig.QEMU-ESP32-Braia  sdkconfig.QEMU-ESP32-Gateway  sdkconfig.QEMU-ESP32-Gateway.old  sdkconfig.esp32doit-devkit-v1  upload_rfc2217.py  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
ESP-IDF/: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig  sdkconfig.esp32doit-devkit-v1  sdkconfig.esp32doit-devkit-v1.old  sdkconfig.old
ESP-IDF/include/: io.h
ESP-IDF/main/: CMakeLists.txt  dataStructs.hpp  includes.hpp  io.h  main.cpp
ESP32_IDF/: CMakeLists.txt  platformio.ini
ESP32_IDF/src/: CMakeLists.txt
components/RobotData/: CMakeLists.txt
components/RobotData/src/: RobotData.cpp  RobotData.h  RobotStatus.cpp  dataEnums.h  dataSensor.h  dataSpeed.cpp
components/RobotData/src/PID/: dataPID.cpp  dataPID.h
components/RobotData/src/SLatMarks/: dataSLatMarks.cpp  dataSLatMarks.h
components/RobotData/src/Sensor/: dataSensor.cpp  dataSensor.h
components/RobotData/src/Speed/: dataSpeed.cpp  dataSpeed.h
components/RobotData/src/Status/: RobotStatus.cpp  RobotStatus.h
components/RobotData/src/dataTypes/: DataAbstract.cpp  DataAbstract.hpp  DataManager.cpp  DataManager.hpp  DataStorage.cpp  DataStorage.hpp  IDataAbstract.hpp
components/RobotServices/: CMakeLists.txt
components/Service/: CMakeLists.txt
gateway/: CMakeLists.txt  platformio.ini
gateway/main/: CMakeLists.txt  main.cpp
main/: CMakeLists.txt  README.md  includes.hpp  main.cpp  main_gateway.cpp  main_robot.cpp
modules/: README.md
modules/common/components/CMDWrapper/: CMakeLists.txt
modules/common/components/CMDWrapper/cmd_datamanager/: cmd_datamanager.cpp  cmd_datamanager.hpp
modules/common/components/CMDWrapper/cmd_param/: cmd_param.cpp  cmd_param.hpp
modules/common/components/CMDWrapper/cmd_runtime/: cmd_runtime.cpp  cmd_runtime.hpp
modules/common/components/CMDWrapper/cmd_system/: cmd_system.cpp  cmd_system.hpp
modules/common/components/CMDWrapper/cmd_wifi/: cmd_wifi.cpp
modules/gateway/: README.md
modules/robot/: README.md
modules/robot/components/RobotData/: CMakeLists.txt  README.md
modules/robot/components/RobotData/src/: RobotData.cpp  RobotData.h  TrackSegment.cpp  TrackSegment.hpp  TrackStatus.cpp  dataEnums.h
modules/robot/components/RobotData/src/Mapping/: README.md  dataMapping.cpp  dataMapping.h
modules/robot/components/RobotData/src/PID/: README.md  TypePID.cpp  TypePID.hpp  dataPID.cpp  dataPID.h
modules/robot/components/RobotData/src/SLatMarks/: dataSLatMarks.cpp  dataSLatMarks.h
modules/robot/components/RobotData/src/Sensor/: README.md  dataSensor.cpp  dataSensor.h
modules/robot/components/RobotData/src/Speed/: README.md  dataSpeed.cpp  dataSpeed.h
modules/robot/components/RobotData/src/Status/: LedStatus.cpp  LedStatus.hpp  README.md  RobotStatus.cpp  RobotStatus.h
modules/shared/: README.md
modules/shared/components/CMDWrapper/: CMakeLists.txt  README.md
modules/shared/components/CMDWrapper/cmd_param/: README.md  cmd_param.cpp  cmd_param.hpp
modules/shared/components/CMDWrapper/cmd_remote/: README.md  cmd_remote.cpp  cmd_remote.hpp
modules/shared/components/CMDWrapper/cmd_system/: README.md  cmd_system.cpp  cmd_system.hpp
modules/shared/components/CMDWrapper/cmd_wifi/: README.md  cmd_wifi.cpp  cmd_wifi.hpp
modules/shared/components/Service/: CMakeLists.txt  README.md
modules/shared/components/Service/src/: cthread.cpp  thread.hpp  workqueue.hpp
modules/shared/components/Service/src/Injector/: singleton.hpp
robot/: CMakeLists.txt  platformio.ini  saida.txt  saida2.txt
robot/main/: dataStructs.hpp  main.cpp
scripts/: extra_script.py  generate_manifest.py  upload_rfc2217.py
services/ESPNOWService/: CMakeLists.txt
services/MappingService/: CMakeLists.txt
services/MotorsService/: CMakeLists.txt
services/PIDService/: CMakeLists.txt
shared/tools/: index.html  manifest.json
(+255 files in other folders)
